--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <title>Contact</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#E0F1E7] flex items-center justify-center my-20">
+<body class="bg-[#E0F1E7] flex items-center justify-center lg:my-20 md:my-52 sm:mt-28">
   <div class="bg-white px-10 py-5 rounded-md">
     <form action="#" id="myForm">
       <h1 class="font-bold text-2xl mb-5">Contact Us</h1>
-      <div class="flex gap-3 mb-5">
+      <div class="md:flex gap-3 mb-5">
         <div>
           <label for="firstname" class="text-sm">First Name *</label>
-          <input type="text" id="firstname" class="block border border-slate-300 outline-none w-[220px] rounded-md py-1 mt-2 pl-5 hover:border-green-300 cursor-pointer active:border-green-300" />
+          <input type="text" id="firstname" class="block border border-slate-300 outline-none w-full rounded-md py-1 mt-2 pl-5 hover:border-green-300 cursor-pointer" />
           <div id="firstNameError" style="color: red;" class="text-xs mt-2"></div>
         </div>
         
         <div>
           <label for="lastname" class="text-sm">Last Name *</label>
-          <input type="text" id="lastname" class="block border border-slate-300 outline-none w-[220px] rounded-md py-1 mt-2 pl-5 hover:border-green-300 cursor-pointer" />
+          <input type="text" id="lastname" class="block border border-slate-300 outline-none w-full rounded-md py-1 mt-2 pl-5 hover:border-green-300 cursor-pointer" />
           <div id="lastNameError" style="color: red;" class="text-xs mt-2"></div>
         </div>
       </div>
@@ -33,16 +33,16 @@
 
       <label for="radio" class="text-sm">Query Type *</label>
       <div class="mb-5">
-        <div class="flex gap-3">
+        <div class="md:flex gap-3">
           <div class="border border-slate-300 outline-none w-full rounded-md py-1 pl-5 mt-2 flex gap-3 items-center">
-            <input type="radio" name="radio" id="generalEnquiry" class="accent-emerald-100" />
-            <label for="generalEnquiry" class="text-sm">General Enquiry</label>
+            <input type="radio" name="radio" id="generalEnquiry" class="bg-green-900" />
+            <label for="generalEnquiry" class="text-sm cursor-pointer ">General Enquiry</label>
           </div>
   
           <div class="border border-slate-300 outline-none w-full rounded-md py-1 pl-5 mt-2 flex gap-3 items-center">
             <input type="radio" name="radio" id="supportRequest" />
-            <label for="supportRequest" class="text-sm">Support request</label>
-        </div>
+            <label for="supportRequest" class="text-sm cursor-pointer">Support request</label>
+          </div>
         </div>
 
         <div id="queryError" style="color: red;" class="text-xs mt-2"></div>
@@ -58,12 +58,12 @@
       <div class="mb-5">
         <div class=" flex gap-4">
           <input type="checkbox" id="consent" />
-          <label for="consent" class="text-sm">I consent to being contacted by the team *</label>
+          <label for="consent" class="text-sm cursor-pointer">I consent to being contacted by the team *</label>
         </div>
         <div id="consentError" style="color: red;" class="text-xs mt-2"></div>
       </div>
 
-      <button type="submit" class="bg-[#0C7D69] w-full rounded-md py-2 text-sm text-white">Submit</button>
+      <button type="submit" class="bg-[#0C7D69] w-full rounded-md py-2 text-sm text-white hover:bg-green-950">Submit</button>
       <div id="errorMessage" style="color: red;"></div> <!-- Single error message container -->
     </form>
   </div>
